--- a/Lab_3/homepage.html
+++ b/Lab_3/homepage.html
@@ -19,8 +19,7 @@
 
         <label for="bill_total">Bill Total &nbsp; &nbsp; &nbsp;</label> <input type="number" id="bill_total" name="bill_total" placeholder="Enter the bill amount"><br><br>
         
-        <label for="slider">Select Range &nbsp; &nbsp; &nbsp;</label>
-        <div class="slidercontainer"><input type="range" min="1" max="100" value="18" class="slider" id="myRange"></div><br><br>
+        <label for="slider">Select Range &nbsp; &nbsp; &nbsp;</label> <input type="range" min="1" max="100" value="18" class="slider" id="myRange"><br><br>
         
         <label for="tip_percentage">Tip Percentage &nbsp; &nbsp; &nbsp;</label> <input type="number" id="tip_percentage" name="tip_percentage" ><br><br>
 
