--- a/Lab_3/homepage.html
+++ b/Lab_3/homepage.html
@@ -40,8 +40,9 @@
         <input type="number" id="final_bill" name="total" disabled="">
           <br><br>
       
+          <div class="buttons">
       <button id="calculate" onclick="calculate_click"> Generate Bill </button> 
-      
+      </div>
   </div>
   <br>
   <br>
