--- a/Lab_3/homepage.html
+++ b/Lab_3/homepage.html
@@ -21,22 +21,22 @@
   <h2>ITMD 4/541 - Lab 3 - Prafful Patel</h2>
     <h1>TIP CALCULATOR</h1>
 
-      <label for="bill_total">Bill Total</label> 
+      <label for="bill_total">Bill Total: &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; </label> 
         <input  id="bill_total" name="bill_total" placeholder="Enter the bill amount">
         <br><br>
 
         <div class="slidecontainer">
-          <label for="tip">Tip</label> 
+          <label for="tip">Tip: &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</label> 
           <input type="range" min="1" max="100" value="50" class="slider" id="tip">
-          <p>Tip Percentage: <span id="demo"></span>%</p>
+          <p>Tip Percentage: &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<span id="demo"></span>%</p>
         </div>
 
 
-      <label for="tip_amount">Tip Amount </label> 
+      <label for="tip_amount">Tip Amount: &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</label> 
         <input type="number" id="tip_amount" disabled="">
         <br><br>
 
-      <label for="total">Total Amount</label> 
+      <label for="total">Total Amount:&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;</label> 
         <input type="number" id="final_bill" name="total" disabled="">
           <br><br>
       
